--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Drew Wyatt</title>
     <link href='/assets/favicon.ico' rel='icon'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/main.css">
 </head>
 
